@@ -1,3 +1,11 @@
+2003-12-13  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-db-pager.c:
+	- Make the page titles work.
+
+	* src/yelp-toc-pager.c:
+	- Emit a finish signal.
+
 2003-12-12  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-html-gtkhtml2.c:
